--- a/server/package.json
+++ b/server/package.json
@@ -3,5 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
+    "openai": "^2.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.2"
+  },
+  "scripts": {
+    "start": "nodemon src/server.js",
+    "format": "prettier --write 'src/**/*.js'"
+  }
 }
