added concurrently to package json start script. Almost able to call api from client

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "private": true,
   "workspaces": ["server", "client"],
   "scripts": {
-    "start": "yarn workspace server start"
+    "client": "yarn workspace client start",
+    "server": "yarn workspace server start",
+    "start": "concurrently --kill-others-on-fail \"yarn server\"  \"yarn client\""
   }
 }
