--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "hookrouter": "^1.2.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
