Added material design components and required dependencies

--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   ],
   "scripts": {
     "start": "yarn workspace client build && yarn workspace server start"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2"
   }
 }
