--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "hookrouter": "^1.2.5",
+    "pullstate": "^1.24.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
@@ -18,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch": "npm-watch"
+    "watch": "npm-watch",
+    "format": "prettier --write 'src/**/*.js'"
   },
   "watch": {
     "build": "src/**/*.js"
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "npm-watch": "^0.11.0"
+    "npm-watch": "^0.11.0",
+    "prettier": "^2.6.2"
   }
 }
