Make site responsive and usable on phones
* Rebuild client on any file change (not just *.js)
* Add .dockerignore file to slim down image
* Replace tabs with spaces in App.css
* Tweak prompt madlib endings to make them a bit more useful
* Randomize max tokens in answer for more variability

--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "format": "prettier --write 'src/**/*.js'"
   },
   "watch": {
-    "build": "src/**/*.js"
+    "build": "src/**/*.*"
   },
   "eslintConfig": {
     "extends": [
